// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component renders a progress bar using default props 1`] = `
@media  {
  .c-rTKYu {
    border-radius: var(--radii-round);
    background: var(--colors-tonal100);
    height: var(--sizes-0);
    position: relative;
    overflow: hidden;
    width: 100%;
  }

  .c-igejEK {
    background-color: currentcolor;
    border-radius: var(--radii-round);
    box-sizing: border-box;
    height: 100%;
    position: absolute;
    transition: all 300ms ease-out;
  }
}

@media  {
  .c-rTKYu-ixnjYu-theme-primary {
    color: var(--colors-primary);
  }
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="c-rTKYu c-rTKYu-ixnjYu-theme-primary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="c-igejEK"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`ProgressBar component renders a solid progress bar 1`] = `
@media  {
  .c-rTKYu {
    border-radius: var(--radii-round);
    background: var(--colors-tonal100);
    height: var(--sizes-0);
    position: relative;
    overflow: hidden;
    width: 100%;
  }

  .c-igejEK {
    background-color: currentcolor;
    border-radius: var(--radii-round);
    box-sizing: border-box;
    height: 100%;
    position: absolute;
    transition: all 300ms ease-out;
  }
}

@media  {
  .c-rTKYu-ixnjYu-theme-primary {
    color: var(--colors-primary);
  }
}

<div>
  <div
    appearance="solid"
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="c-rTKYu c-rTKYu-ixnjYu-theme-primary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="c-igejEK"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;
